--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
 :root {
 }
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
+}
+
+.video-container {
+  display: flex;
+  flex-direction: column;
 }
