--- a/style.css
+++ b/style.css
@@ -20,4 +20,15 @@ body {
 .thumbnail {
   position: relative;
   display: flex;
+  max-width: 250px;
+}
+
+.thumbnail::before {
+  content: attr(data-duration);
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  background-color: rgba(0, 0, 0, 0.85);
+  padding: 5px;
+  border-radius: 5px;
 }
