--- a/style.css
+++ b/style.css
@@ -12,6 +12,15 @@
 body {
 }
 
+.video-section {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 3rem 1rem;
+  padding: 3rem 0;
+  margin: 0 1.5rem;
+  border-top: 3px solid #ccc;
+}
+
 .video-container {
   display: flex;
   flex-direction: column;
@@ -20,7 +29,6 @@ body {
 .thumbnail {
   position: relative;
   display: flex;
-  max-width: 250px;
 }
 
 .thumbnail::before {
