--- a/style.css
+++ b/style.css
@@ -41,6 +41,15 @@ body {
   right: 5px;
   bottom: 5px;
   background-color: rgba(0, 0, 0, 0.85);
-  padding: 5px;
+  padding: 2px 5px;
   border-radius: 5px;
+  color: #fff;
+}
+
+.thumbnail-image {
+  width: 100%;
+  height: 100%;
+  min-width: 250px;
+  min-height: 150px;
+  background-color: #aaa;
 }
