--- a/style.css
+++ b/style.css
@@ -53,3 +53,20 @@ body {
   min-height: 150px;
   background-color: #aaa;
 }
+
+.video-bottom-section {
+  display: flex;
+  gap: 0.75rem;
+}
+
+.channel-icon {
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  background-color: #aaa;
+}
+
+.video-details {
+  display: flex;
+  flex-direction: column;
+}
