--- a/style.css
+++ b/style.css
@@ -74,8 +74,16 @@ body {
 }
 
 .video-title {
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  text-decoration: none;
+  color: #000;
 }
 
 .video-channel-name,
 .metaldata {
+}
+
+.video-channel-name {
 }
