--- a/style.css
+++ b/style.css
@@ -89,4 +89,9 @@ body {
 
 .video-channel-name {
   margin-bottom: 0.1rem;
+  transition: color 150ms;
+}
+
+.video-channel-name:hover {
+  color: #111;
 }
