--- a/style.css
+++ b/style.css
@@ -25,6 +25,15 @@ body {
   border-top: none;
 }
 
+.video-section-title {
+  grid-column: 1/-1;
+  margin: -0.5rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 0.5rem;
+}
+
 .video-container {
   display: flex;
   flex-direction: column;
@@ -53,6 +62,7 @@ body {
   min-width: 250px;
   min-height: 150px;
   background-color: #aaa;
+  border-radius: 10px;
 }
 
 .video-bottom-section {
