--- a/style.css
+++ b/style.css
@@ -34,6 +34,15 @@ body {
   padding: 0 0.5rem;
 }
 
+.video-section-title-close {
+  border-style: none;
+  background-color: transparent;
+  font-size: 2rem;
+  padding: 0;
+  color: #555;
+  cursor: pointer;
+}
+
 .video-container {
   display: flex;
   flex-direction: column;
