--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
 body {
 }
 
+.videos {
+  background-color: #f9f9f9;
+}
+
 .video-section {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
