--- a/style.css
+++ b/style.css
@@ -12,6 +12,23 @@
 body {
 }
 
+/*            Categories            */
+
+.categories {
+  padding: 1rem 2rem;
+}
+
+.category-section {
+}
+
+.category {
+}
+
+.active {
+}
+
+/*            Videos            */
+
 .videos {
   background-color: #f9f9f9;
 }
