--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ body {
 
 /*            Header            */
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
 .youtube-logo {
 }
 
