.search-bar .search-input

--- a/style.css
+++ b/style.css
@@ -26,6 +26,13 @@ body {
 }
 
 .search-bar {
+  display: flex;
+  flex-grow: 1;
+  margin: 0 8rem 0 16rem;
+}
+
+.search-input {
+  width: 100%;
 }
 
 .search-btn {
