--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 :root {
+  --sidebar-width: 15rem;
 }
 
 *,
@@ -10,6 +11,21 @@
 }
 
 body {
+}
+
+.page-container {
+  display: flex;
+}
+
+.content-container {
+  width: calc(100vw - var(--sidebar-width));
+}
+
+/*            Sidebar            */
+
+.sidebar {
+  width: var(--sidebar-width);
+  background-color: #f8f8f8;
 }
 
 /*            Header            */
@@ -121,7 +137,7 @@ body {
 
 .video-section {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   gap: 3rem 1rem;
   padding: 3rem 0;
   margin: 0 1.5rem;
