--- a/style.css
+++ b/style.css
@@ -26,6 +26,19 @@ body {
 .sidebar {
   width: var(--sidebar-width);
   background-color: #f8f8f8;
+  display: flex;
+  flex-direction: column;
+}
+
+.sidebar-category-section {
+  padding: 1rem 0.5rem;
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #606060;
+}
+
+.sidebar-category-section:first-child {
+  padding-top: 0;
 }
 
 .sidebar-category {
@@ -33,6 +46,7 @@ body {
   align-items: center;
   gap: 1rem;
   padding: 0.5rem 1rem;
+  font-weight: bold;
 }
 
 .sidebar-category img {
