--- a/style.css
+++ b/style.css
@@ -24,16 +24,28 @@ body {
 /*            Sidebar            */
 
 .sidebar {
+  position: sticky;
+  top: 4.1rem;
+  height: calc(100vh - 4.1rem);
   width: var(--sidebar-width);
   background-color: #f8f8f8;
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  z-index: 999;
+}
+
+.sidebar::-webkit-scrollbar {
+  display: none;
 }
 
 .sidebar-category-section {
   padding: 1rem 0.5rem;
   display: flex;
   flex-direction: column;
+  gap: 0.5rem;
   border-bottom: 1px solid #606060;
 }
 
@@ -51,10 +63,16 @@ body {
   gap: 1rem;
   padding: 0.5rem 1rem;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .sidebar-category img {
-  width: 2rem;
+  width: 1.5rem;
+}
+
+.sidebar-category-active {
+  background-color: #cdcaca;
+  border-radius: 10px;
 }
 
 /*            Header            */
