--- a/style.css
+++ b/style.css
@@ -77,6 +77,22 @@ body {
 
 /*            Header            */
 
+.menu-icon {
+  width: 1.2rem;
+  height: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+  padding: 0.3rem 0;
+  margin-right: 2rem;
+}
+
+.menu-icon > .dash {
+  background-color: black;
+  width: 100%;
+  height: 20px;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -190,7 +206,7 @@ body {
 
 .video-section {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 3rem 1rem;
   padding: 3rem 0;
   margin: 0 1.5rem;
